@@ -2,21 +2,22 @@
 title: Installation
 layout: default
 ---
+# Installation overview
 Two major steps must be followed for installing OpenZoo: the installation and configuration of the third party software and the installation of the OpenZoo management GUI (OpenZUI), along with the templates and the examples.
 In the following, detailed instructions are given for both.
 
 # Prerequisites
+- Netbeans 8 for developing the services and creating the war files of the services and the OpenZUI.
 - Apache Tomcat 7 for the OpenZUI and the servers. Apache Tomcat 8 should also work, but it is not tested yet.
 - RedisIO for storing and exchanging framework parameters.
-- RabbitMQ server for the communication between the services.
-- Netbeans 8 for developing the services and creating the war files of the services and the OpenZUI.
-- MongoDB 2.6 or higher for storing results.
-- Twitter authorization tokens (https://dev.twitter.com/oauth/overview/application-owner-access-tokens) for using the demonstration topology described in the sequel.
+- RabbitMQ for the communication between the services.
+- MongoDB 2.6 or higher for storing results. Version 3.0 or higher is recommended.
+- [Twitter authorization tokens](https://dev.twitter.com/oauth/overview/application-owner-access-tokens) for using the demonstration topology described in the sequel.
 
 # Installation of third party software
 The following instructions are for Ubuntu 14.04 LTS. The installation on Windows should work similarly.
 ## Platform (Cluster servers)
-Disc space, CPU and memory requirements depend on the deployed services. The framework itself does not need more than 512 MBs of memory. 2 GBs of memory is a reasonable value.
+Disc space, CPU and memory requirements depend on the deployed services. The framework itself does not need more than 512 MBs of memory. 2 GBs of memory per server is a reasonable value.
 The servers need a static IP, in order to be accessible over a long time period. DHCP can also be used for short time periods.
 Be sure to install the latest OS updates, e.g. for Ubuntu:
 
@@ -25,7 +26,7 @@ Be sure to install the latest OS updates, e.g. for Ubuntu:
 > sudo apt-get dist-upgrade
 
 
-## Apache Tomcat 7, along with Java 7
+## [Apache Tomcat 7](http://tomcat.apache.org/), along with Java 7
 Tomcat needs to be installed on every server that will participate to the OpenZoo server cluster, as well as to the server where the OpenZUI management application will be deployed.
 
 
@@ -64,10 +65,17 @@ Add the following:
 
 > sudo cp setenv.sh /usr/share/tomcat7/bin/
 
+Set JAVA_HOME path and appropriate limits for –Xms, Xmx, MaxPermSize in the script, if neccessary.
+The default values for memory are 1GB for initial and maximum heap size and 512 MB for PermGen.
+
 ~~~~~~
-Set JAVA_HOME
-Set appropriate limits for –Xms, Xmx, MaxPermSize if neccessary.
+JAVA_HOME="/usr/lib/jvm/default-java"
+-Xms1024m
+-Xmx1024m
+-XX:MaxPermSize=512m
 ~~~~~~
+
+More information on choosing meaningful parameters can be found in this brief, excelent post about [Tomcat memory settings](https://rimuhosting.com/knowledgebase/linux/java/-Xmx-settings).
 
 - Restart tomcat
 
@@ -78,8 +86,9 @@ Set appropriate limits for –Xms, Xmx, MaxPermSize if neccessary.
 
 > sudo apt-get install tomcat7-admin
 
+The Tomcat credentials are needed later for registering the servers through OpenZUI.
 
-## RedisIO
+## [RedisIO](http://redis.io/)
 Redis needs to be installed just once, preferably on the server where the OpenZUI management tool will be installed.
 
 - Install server
@@ -99,6 +108,8 @@ deb-src http://packages.dotdeb.org squeeze all
 
 > sudo apt-get install redis-server
 
+- Allow remote connections
+
 > sudo nano /etc/redis/redis.conf
 
 Find the following line
@@ -113,10 +124,13 @@ and put in the IP of the server hosting redis (X.X.X.X)
 bind X.X.X.X 127.0.0.1
 ~~~~~~
 
+- Restart server
+
 > sudo service redis-server restart
 
+The Redis IP will used later, before deploying the OpenZUI application.
 
-## RabbitMQ
+## [RabbitMQ](https://www.rabbitmq.com/)
 You can install one RabbitMQ server per topology, or use one for all your topologies.
 
 - Install RabbitMQ
@@ -152,12 +166,13 @@ deb http://www.rabbitmq.com/debian/ testing main
 
 > sudo service rabbitmq-server restart
 
+This information (username and password) will be used later when creating a topology.
 
 
-## MongoDB
+## [MongoDB](https://www.mongodb.org/)
 You can install one MongoDB server per topology, or use one for all your topologies, selecting different database names for each topology.
 
-- Install Mongo 3.0
+- Install Mongo 2.6 or higher (3.0 or higher recommended)
 
 > sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10
 
@@ -167,7 +182,7 @@ You can install one MongoDB server per topology, or use one for all your topolog
 
 > sudo apt-get install mongodb-org=3.0.0 mongodb-org-server=3.0.0 mongodb-org-shell=3.0.0 mongodb-org-mongos=3.0.0 mongodb-org-tools=3.0.0
 
-- Hold Mongo version if needed
+- Hold Mongo version if we want to prevent version upgrades in the future
 
 > echo "mongodb-org hold" | sudo dpkg --set-selections
 
@@ -180,7 +195,7 @@ You can install one MongoDB server per topology, or use one for all your topolog
 > echo "mongodb-org-tools hold" | sudo dpkg --set-selections
 
 
-- Disable interface binding
+- Disable interface binding, so that clients can connect from anywhere
 
 > sudo nano /etc/mongod.conf
 
@@ -194,7 +209,7 @@ Find and comment out the following line
 
 > sudo service mongod start
 
-- We will also create user dbadmin with password dbpwd for the admin database and the testdb database and enable authentication. Of course, different credentials can be selected.
+- Create users for the database administration
 
 > mongo
 
@@ -205,12 +220,19 @@ use admin
 var schema = db.system.version.findOne({"_id" : "authSchema"})
 schema.currentVersion = 3
 db.system.version.save(schema)
-db.createUser( { user: "dbadmin", pwd: "dbpwd", roles: [ { role: "userAdminAnyDatabase", db: "admin" } ] } )
+db.createUser( { user: "dbowner", pwd: "dbownpwd", roles: [ { role: "dbOwner", db: "admin" } ] } )
 use testdb
-db.createUser( { user: "dbadmin", pwd: "dbpwd", roles: [ {role: "readWrite", db: "topodb"} ] } )
+db.createUser( { user: "dbadmin", pwd: "dbpwd", roles: [ {role: "readWrite", db: "testdb"} ] } )
 ~~~~~~
 
-Enable authentication
+After setting the authSchema version, we create a *dbowner* user (please use a different password) with the role dbOwner.
+This user can do anything with any database on the server. It is intended for general database administration and will not be used by OpenZoo. Please use it with caution.
+
+The last two lines create a *testdb database* and a user with read/write rights on that database.
+Please use your own names for the database, the user and, of course, a different password.
+The dbadmin credentials will be used later when creating a topology. The database name will be passed to the appropriate component through the OpenZUI.
+
+- Enable authentication
 
 > sudo nano /etc/mongod.conf
 
@@ -227,11 +249,11 @@ security:
   authorization: enabled
 ~~~~~~
 
-Restart Mongo
+- Restart Mongo
 
 > sudo service mongod restart
 
-Check authentication
+- Check authentication
 
 > mongo testdb –u dbadmin –p dbpwd
 
@@ -241,14 +263,14 @@ Check authentication
 
 # Installation of the OpenZoo framework
 1. Download the whole repository, containing the following services:
-    - OpenZUI: The GUI to the OpenZoo framework
-    - OpenZooService: The basic service functionality, to be inherited by all services
-    - ServerResources: A web service for retrieving server capacity/load information, to be installed on every OpenZoo server
-    - ImageDownloader: A dummy service for downloading images
-    - MongoManager: A test service for accessing MongoDB
-    - TwitterListener: A test service for wrapping the TwitterStream API
-    - URLUnwrapper: A test service for unwrapping short URLs
-    - Researcher: A test service for forwarding user requests
+    - **OpenZUI**: Administration GUI for the OpenZoo framework
+    - **OpenZooService**: The basic service functionality, to be inherited by all services
+    - **ServerResources**: Web service for retrieving server capacity/load information, to be (automatically) installed on every OpenZoo server
+    - **ImageDownloader**: Test (dummy) service for downloading images
+    - **MongoManager**: Test service for accessing MongoDB
+    - **TwitterListener**: Test service for wrapping the TwitterStream API
+    - **URLUnwrapper**: Test service for unwrapping short URLs
+    - **Researcher**: Test service for forwarding user requests
 
 2. Run Tomcat 7 server on all available servers and create a password protected user on each tomcat server, as described in the section above.
 
@@ -256,11 +278,11 @@ Check authentication
 
 4. Open all projects with Netbeans 8.
 
-5. Build projects, starting by ServerResources, since it needs to be included in the OpenZUI war later. This is going to be done automatically (on -post-dist).
+5. Build projects, starting by ServerResources, since it needs to be included in the OpenZUI war later. The inclusion is going to be done automatically (on -post-dist).
 
 6. Edit OpenZUI/web/config.json:
     - update keyvalue.host and keyvalue.port with the RedisIO server and port
     - update localRepository with a folder with read/write permissions for the tomcat user, anywhere on the server where OpenZUI will be installed.
-    - update demouser.username and demouser.passwd if necessary
+    - update demouser.username and demouser.passwd, if necessary
 
-7. Deploy OpenZUI project to a tomcat server. Everything else can be done through OpenZUI (http://TOMCAT_SERVER:TOMCAT_PORT/OpenZUI/).
+7. Deploy OpenZUI project to a tomcat server. Everything else can be done through OpenZUI, which will be accessible through http://TOMCAT_SERVER:TOMCAT_PORT/OpenZUI/.
